# edit

./: .gitignore  Cargo.toml  EDIT_TRAMPOLINE  README  config  development  mock_config  start  todo
src/: action.rs  application.rs  buffer.rs  cli.rs  config.rs  display_area.rs  display_map.rs  document.rs  editor.rs  history.rs  kakoune_style_commands.rs  keybind.rs  lib.rs  main.rs  mode.rs  mode_stack.rs  old_selections.rs  range.rs  selection.rs  selection2d.rs  selections.rs  text_util.rs  tutorial.rs  ui.rs  view.rs
src/tests/: mod.rs
src/ui/: document_viewport.rs  highlighter.rs  interactive_text_box.rs  popups.rs  status_bar.rs  util_bar.rs
src/utilities/: add_selection_above.rs  add_selection_below.rs  add_surrounding_pair.rs  backspace.rs  center_view_vertically_around_cursor.rs  clear_non_primary_selections.rs  collapse_selections_to_anchor.rs  collapse_selections_to_cursor.rs  copy.rs  cut.rs  decrement_primary_selection.rs  delete.rs  extend_selection_buffer_end.rs  extend_selection_buffer_start.rs  extend_selection_down.rs  extend_selection_home.rs  extend_selection_left.rs  extend_selection_line_end.rs  extend_selection_line_start.rs  extend_selection_line_text_start.rs  extend_selection_page_down.rs  extend_selection_page_up.rs  extend_selection_right.rs  extend_selection_up.rs  extend_selection_word_boundary_backward.rs  extend_selection_word_boundary_forward.rs  flip_direction.rs  increment_primary_selection.rs  incremental_search_in_selection.rs  incremental_split_in_selection.rs  insert_string.rs  mod.rs  move_cursor_down.rs  (+28 more)
tests/: mod.rs
(+111 files in other folders)
