[package]
name = "edit"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-segmentation = "1"
crossterm = {version = "0.26", features = ["event-stream"]}
ratatui = {version = "0.28.0", features = ["all-widgets"]}
ropey = "1.6.1"
#edit_core = {path = "../edit_core"} #use this for developing
#edit_core = {git = "https://github.com/JustinEnlow/edit_core"} #use this for release
unicode-width = "0.2.1"
indexmap = "2.10.0"


regex = "1.11.1"
